--- a/extra_addons/study/views/study_menu.xml
+++ b/extra_addons/study/views/study_menu.xml
@@ -18,7 +18,7 @@
                           id="study_first_menu"
                           parent="study_menu"
                           sequence="10"
-                          name="Study First Module"/>
+                          name="Course"/>
                 <!--Действие должно быть объявлено перед его соответствующим меню в XML-файле.-->
                 <!--Файлы данных выполняются последовательно, id действия должно присутствовать -->
                 <!--в базе данных до того, как пункт меню будет создан.-->
